# Morph-1

./: .clang-tidy  .dockerignore  .gitignore  Dockerfile  README.md  conanfile.py  docker-build.sh  meson.build  meson_options.txt
docs/: Doxyfile  meson.build
docs/source/: conf.py  index.rst
glsl/: dummy.glslf  dummy.glslv
python/: morph.py
python/test/testbinding/: testfunctioncalls.py  testinheritance.py
python/ui/: __init__.py
scripts/: __init__.py  export_thirdparty_packages.sh
src/: meson.build
src/core/: logger.cpp  logger.h  meson.build
src/foundation/: meson.build  murmurhash.cpp  murmurhash.h  observable.cpp  observable.h  platform.h  sharedany.h  taskqueue.cpp  taskqueue.h  vecor.h  vector.h
src/foundation/heterogeneous/: box.h  dict.h  list.cpp  list.h  meson.build  typeinfo.h
src/foundation/heterogeneous/detail/: deleter.h  typeinfo.h
src/foundation/immutable/: anytypemap.h  immutablemap.h  map.h  sharedany.h
src/foundation/immutable/detail/: array.h  bits.h  hamtnode.h  iterator.h  memorypolicy.h  refcounted.h
src/python/: cast.h  class.h  deleter.h  exceptions.h  function.h  instance.cpp  instance.h  internals.cpp  internals.h  meson.build  module.h  pythonapi.cpp  pythonapi.h  trampoline.h  typecaster.h  utils.h
src/python/test/: internalsinspector.h  meson.build  module.cpp
src/python/ui/: meson.build  module.cpp
src/scene/: renderer.h
src/test/: meson.build  taskqueuetest.cpp
src/test/core/: testlogger.cpp
src/test/foundation/: testanytypemap.cpp  testimmutablemap.cpp  testobservable.cpp  testtaskqueue.cpp  testvector.cpp
src/ui/: application.cpp  application.h  component.h  meson.build  uitypes.h
src/vk/: meson.build  vkrenderer.cpp  vkrenderer.h
